--- a/style.css
+++ b/style.css
@@ -67,6 +67,22 @@ body > main  article {
     width: 90%;
 }
 
+.buy-now-button {
+    background-color: #519D9E; 
+    color: white; /* White text */
+    padding: 10px 20px; /* Padding for the button */
+    text-align: center; /* Center the text */
+    text-decoration: none; /* Remove underline from the text */
+    border-radius: 5px; /* Rounded corners */
+    font-size: 16px; /* Button text size */
+    display: inline-block; /* Make it inline */
+    transition: background-color 0.3s ease; /* Smooth transition on hover */
+}
+
+.buy-now-button:hover {
+    background-color: #2f696a; /* Darker when hovered */
+}
+
 form {
     text-align: center;
 }
